fix show mobile num on small display

--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -11,6 +11,7 @@
     gap: 20px;
 
     &--show {
+      display: none;
       text-align: right;
       font-size: 12px;
       font-family: inherit;
@@ -21,6 +22,10 @@
       color: $main-color-text;
       transition: all 0.3s linear;
       opacity: 0;
+
+      @include onTablet {
+        display: block;
+      }
     }
 
     &:hover {
